--- a/index.html
+++ b/index.html
@@ -522,7 +522,7 @@
             
             <div class="contact-email">
                 <i class="fas fa-envelope"></i>
-                <span>toolswonder1@gmail.com</span>
+                <span>freemultitool@gmail.com</span>
             </div>
             
             <button class="mobile-menu-btn">
